kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservice-architecture-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otus/lapeevvd($|/)(.*)
            pathType: Prefix
            backend:
              service:
                name: microservice-architecture-service
                port:
                  number: 8000
